--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <ul>
         <li><a href="recipes/strawberry-pie.html">Strawberry Pie</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+        <li><a href="recipes/ClassicMacaroniSalad.html">Classic Macaroni Salad</a></li>
         <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
       </ul>
     
