--- a/recipes/strawberry-pie.html
+++ b/recipes/strawberry-pie.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strawberry Pie</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Strawberry Pie</title>
 </head>
+
 <body>
-    <h1>Strawberry Pie</h1>
-    <img src="https://www.allrecipes.com/thmb/AmRwl_408trKE1x3zfUtLyzmFXA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/15836-strawberry-pie-ii-DDMFS-4x3-6294-020f1ed200db4bf1a221852e92dbb8b4.jpg" alt="An image of Strawberry Pie">
+  <h1>Strawberry Pie</h1>
+  <img
+    src="https://www.allrecipes.com/thmb/AmRwl_408trKE1x3zfUtLyzmFXA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/15836-strawberry-pie-ii-DDMFS-4x3-6294-020f1ed200db4bf1a221852e92dbb8b4.jpg"
+    alt="An image of Strawberry Pie">
 
-    <h3>Description</h3>
+  <h3>Description</h3>
 
-    <p>Strawberry pie is a dessert food consisting mainly of strawberries and sugar in a pie crust, sometimes with gelatin. It is often served with whipped cream.</p>
+  <p>Strawberry pie is a dessert food consisting mainly of strawberries and sugar in a pie crust, sometimes with
+    gelatin. It is often served with whipped cream.</p>
 
-    <p>In the United States, strawberry pie is one of the red foods often served at Juneteenth celebrations, and is also a popular dessert at Fourth of July gatherings.
+  <p>In the United States, strawberry pie is one of the red foods often served at Juneteenth celebrations, and is also a
+    popular dessert at Fourth of July gatherings.
   </p>
 
   <h3>Ingredients</h3>
   <ul>
 
-    <li>1 quart fresh strawberries, hulled</li> 
+    <li>1 quart fresh strawberries, hulled</li>
 
-<li>1 (9 inch) pie crust, baked</li>
+    <li>1 (9 inch) pie crust, baked</li>
 
-<li>1 cup white sugar</li>
+    <li>1 cup white sugar</li>
 
-<li>3 tablespoons cornstarch</li>
+    <li>3 tablespoons cornstarch</li>
 
-<li>¾ cup water</li>
+    <li>¾ cup water</li>
 
-<li>½ cup heavy whipping cream</li>
+    <li>½ cup heavy whipping cream</li>
   </ul>
 
 
@@ -38,11 +44,14 @@
   <ol>
     <li>Gather all ingredients.</li>
     <li>Arrange 1/2 of strawberries in baked pastry shell. Place remaining strawberries in a medium saucepan.</li>
-    <li>Add sugar to the strawberries in the saucepan; place over medium heat and bring to a boil, stirring frequently.</li>
+    <li>Add sugar to the strawberries in the saucepan; place over medium heat and bring to a boil, stirring frequently.
+    </li>
 
-    <li>Whisk cornstarch and water together in a small bowl. Gradually stir cornstarch mixture into boiling strawberry mixture. Reduce heat and simmer mixture until thickened, about 10 minutes, stirring constantly</li>
+    <li>Whisk cornstarch and water together in a small bowl. Gradually stir cornstarch mixture into boiling strawberry
+      mixture. Reduce heat and simmer mixture until thickened, about 10 minutes, stirring constantly</li>
 
-    <li>Pour cooked strawberry mixture over berries in pastry shell. Refrigerate until chilled and set, at least 3 hours.</li>
+    <li>Pour cooked strawberry mixture over berries in pastry shell. Refrigerate until chilled and set, at least 3
+      hours.</li>
 
     <li>Before serving, whip cream in a medium bowl until soft peaks form.</li>
 
@@ -50,6 +59,7 @@
 
 
   </ol>
-   
+
 </body>
+
 </html>
