--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="recipes/strawberry-pie.html">Strawberry Pie</a></li>
         <li><a href="recipes/ClassicMacaroniSalad.html">Classic Macaroni Salad</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+        <li><a href="recipes/BananaBread.html">Banana Bread</a></li>
       </ul>
     
 
